# College-Touring

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Main.qml  Main.qml Password Addon  README.md  TripPlanner.cpp  TripPlanner.h  build.ninja  campus.db  cmake_install.cmake  collegeMaintenance(Sheet1).csv  collegedistances.csv  collegemodel.cpp  collegemodel.h  colleges.db  compile_commands.json  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  souvenirMaintenance(Sheet1).csv  souvenirdatabasemanager.cpp  souvenirdatabasemanager.h  souvenirs.db  souvenirslist.csv
